@@ -10,7 +10,7 @@ public class CompletableFutureTest {
 
     public static void main(String[] args) {
 
-        try (var threadPoolExecutor = Executors.newCachedThreadPool()) {
+        try (var threadPoolExecutor = Executors.newVirtualThreadPerTaskExecutor()) {
 
             long start = System.currentTimeMillis();
 
